<resources>
    <string name="app_name">TuneSelector</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="space">_</string>
    <string name="action_setting">Default options</string>
    <string name="default_amp">Amplitude</string>
    <string name="default_dur">Duration(ms)</string>
    <string name="example_songs">Example songs</string>
    <string name="default_mode">Mode</string>
    <string name="okay">Okay</string>
    <string name="note">Note</string>
    <string name="song">Song</string>
</resources>
