<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tune_buttons"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/a_btn"
            android:text="@string/a"
            android:background="@drawable/roundedbutton"
            android:layout_margin="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/b_btn"
            android:text="@string/b"
            android:background="@drawable/roundedbutton"
            android:layout_margin="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/c_btn"
            android:text="@string/c"
            android:background="@drawable/roundedbutton"
            android:layout_margin="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/d_btn"
            android:text="@string/d"
            android:background="@drawable/roundedbutton"
            android:layout_margin="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/tune_buttons_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tune_buttons"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/e_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:text="@string/e" />

        <Button
            android:id="@+id/g_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:text="@string/g" />

        <Button
            android:id="@+id/f_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:text="@string/f" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/undo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"

            app:srcCompat="@android:drawable/ic_menu_revert" />
    </LinearLayout>

    <EditText
        android:id="@+id/send_sequence"
        android:visibility="invisible"
        android:padding="16dp"
        android:layout_above="@+id/send_btn"
        android:layout_below="@+id/tune_buttons_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        android:scrollHorizontally="false"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_menu_send" />
</RelativeLayout>


